Move readme stuff, add copyright comment

--- a/ezvzdump.conf
+++ b/ezvzdump.conf
@@ -1,3 +1,9 @@
+# This section contains variables that require user customisation. 
+# NOTE: all directory names *must* end in a forward-slash. 
+ 
+# This variable contains a space delimited list of VEID's to be backed up.
+# You can use VEIDS="$(cd /vz/private/ && echo *)"  to backup all your VE's.
+
 VEIDS="136"
 
 VZ_CONF="/etc/vz/conf/"             # the path to your openvz $VEID.conf files
@@ -38,7 +44,6 @@ DEFAULT_BACKUP_SET="daily"
 # undefined: use DEFAULT_QTY
 
 DEFAULT_QTY=2
-
 DAILY_QTY=2
 WEEKLY_QTY=1
 MONTHLY_QTY=1
