--- a/ezvzdump.conf
+++ b/ezvzdump.conf
@@ -4,47 +4,58 @@
 # This variable contains a space delimited list of VEID's to be backed up.
 # You can use VEIDS="$(cd /vz/private/ && echo *)"  to backup all your VE's.
 
-VEIDS="136"
+
+#default veids to backup
+VEIDS_DEFAULT="101 102 103 104 105" 
+
+# per backup set veids (if not set, uses VEIDS_DEFAULT)
+# read also backup sets
+VEIDS_DAILY="101 102 103 104 105" 
+VEIDS_WEEKLY=${VEIDS_DAILY}
+VEIDS_MONTHLY="103 105" 
+
+#backup sets:
+# you can use several sets of backups resulting in backups labeled differently and each set rotated independently.
+# useful if you want to make daily, weekly and monthly backups. There are no special meanings of weekly, daily, etc.
+# first argument to ezvzdump is the backup set, for example:
+# ezvzdump daily
+
+#default backup set if not specified in the command line
+DEFAULT_BACKUP_SET="daily"
+
+# quantity of previous backups to rotate before replacement.
+# 1: current and previous backup
+# 0: only the current backup. caution. backup is replaced with new one. if an error ocurrs during replace, no valid backup will remain.
+# undefined: use DEFAULT_QTY
+
+DEFAULT_ROTATION=2
+DAILY_ROTATION=2
+WEEKLY_ROTATION=1
+MONTHLY_ROTATION=1
 
 VZ_CONF="/etc/vz/conf/"             # the path to your openvz $VEID.conf files
 VZ_PRIVATE="/var/lib/vz/private/"           # the path to the running VE's
 LOCAL_DIR="/var/lib/vz/ezvzdump/"           # the local rsync cache / destination directory
 
+TMPDIDR="/tmp/"
+
 # The remote host and path that this script will rsync the VE's to.
-REMOTE_HOST="hyper.europa2.spiralti.com"
+REMOTE_HOST="my.remote.storage.com"
 REMOTE_DIR="/var/lib/vz/cross-backups/"
 
 # Default rsync flags (please note the potentially unsafe delete flags).
-# You can also remove the v flag to get less verbose logging.
+# Removing the v flag voids the line copied summary.
 RSYNC_DEFAULT="rsync -ravH --delete-after --delete-excluded"
 
 # Exclude these directories from backup (space delimited).
 # I left /var/log in the backup because when doing a full restore
 # it's necessary that this directory structure is present.
-RSYNC_EXCLUDE="/usr/portage"
+RSYNC_EXCLUDE="/lib/modules /var/cache/apt/archives"
 
 # Path to vzctl executable
 VZCTL="vzctl"
 
 PIDFILE=/var/run/ezvzdump.pid
 
-MAIL_NOTIFY=test@example.com
-MAIL_RELAY=localhost
-
-#backup sets:
-# you can use several sets of backups resulting in backups labeled differently and rotating each set independently.
-# useful if you want to make daily, weekly and monthly backups.
-
-DEFAULT_BACKUP_SET="daily"
-
-# quantity of previous backups to rotate before replacement.
-# 1: current and previous backup
-# 0: only the current backup. caution. backup is replaced with new one. if an error ocurrs during replace, no valid backup will remain.
-# -1: unlimited, never delete old backups.
-# undefined: use DEFAULT_QTY
-
-DEFAULT_QTY=2
-DAILY_QTY=2
-WEEKLY_QTY=1
-MONTHLY_QTY=1
+MAIL_NOTIFY=my@email.address
 
