resumes interrupted backup session.

--- a/ezvzdump.conf
+++ b/ezvzdump.conf
@@ -26,7 +26,7 @@ DEFAULT_BACKUP_SET="daily"
 # quantity of previous backups to rotate before replacement.
 # 1: current and previous backup
 # 0: only the current backup. caution. backup is replaced with new one. if an error ocurrs during replace, no valid backup will remain.
-# undefined: use DEFAULT_QTY
+# undefined: use DEFAULT_ROTATION
 
 DEFAULT_ROTATION=2
 DAILY_ROTATION=2
@@ -56,6 +56,7 @@ RSYNC_EXCLUDE="/lib/modules /var/cache/apt/archives"
 VZCTL="vzctl"
 
 PIDFILE=/var/run/ezvzdump.pid
+STATE_DIR=/var/lib/ezvzdump
 
 MAIL_NOTIFY=my@email.address
 
