PIDFILE -> PID_FILE and shortcut to backup all containers

--- a/ezvzdump.conf
+++ b/ezvzdump.conf
@@ -5,8 +5,10 @@
 # You can use VEIDS="$(cd /vz/private/ && echo *)"  to backup all your VE's.
 
 
-#default veids to backup
+#default containers to backup
 VEIDS_DEFAULT="101 102 103 104 105" 
+#shortcut to include all running containers
+#VEIDS_DEFAULT=`vzlist -H -o veid`
 
 # per backup set veids (if not set, uses VEIDS_DEFAULT)
 # read also backup sets
@@ -55,7 +57,7 @@ RSYNC_EXCLUDE="/lib/modules /var/cache/apt/archives"
 # Path to vzctl executable
 VZCTL="vzctl"
 
-PIDFILE=/var/run/ezvzdump.pid
+PID_FILE=/var/run/ezvzdump.pid
 STATE_DIR=/var/lib/ezvzdump
 
 MAIL_NOTIFY=my@email.address
