added LVM support for second phase rsync. minimizes downtime

--- a/ezvzdump.conf
+++ b/ezvzdump.conf
@@ -41,6 +41,16 @@ LOCAL_DIR="/var/lib/vz/ezvzdump/"           # the local rsync cache / destinatio
 
 TMPDIDR="/tmp/"
 
+#experimental. use LVM snapshots to reduce the container suspend time.
+LVM="yes"	    	         #backup using lvm snapshots. comment line to disable
+LVM_DEVICES_PATH="/dev"          # base_path for lvm devices. devices should be accesible via
+                                 # ${LVM_DEVICES_PATH}/${LVM_GROUP}/${LVM_VOLUME}
+LVM_GROUP="storage"              #the lvm volume group device path
+LVM_VOLUME="vz"
+LVM_MOUNTPOINT="/var/lib/vz"      #the path where LVM_DEVICE is mounted
+LVM_SNAPSHOT_SIZE="5G"            #the size of the snapshot
+
+
 # The remote host and path that this script will rsync the VE's to.
 REMOTE_HOST="my.remote.storage.com"
 REMOTE_DIR="/var/lib/vz/cross-backups/"
