fix rsync options to use numeric ids

--- a/ezvzdump.conf
+++ b/ezvzdump.conf
@@ -57,7 +57,7 @@ REMOTE_DIR="/var/lib/vz/cross-backups/"
 
 # Default rsync flags (please note the potentially unsafe delete flags).
 # Removing the v flag voids the line copied summary.
-RSYNC_DEFAULT="rsync -ravH --delete-after --delete-excluded"
+RSYNC_DEFAULT="rsync -ravH --delete-after --delete-excluded --numeric-ids"
 
 # Exclude these directories from backup (space delimited).
 # I left /var/log in the backup because when doing a full restore
