Add remote parameters.
New remote parameters: REMOTE_USER, REMOTE_NICE, REMOTE_IONICE

--- a/ezvzdump.conf
+++ b/ezvzdump.conf
@@ -51,9 +51,12 @@ LVM_MOUNTPOINT="/var/lib/vz"      #the path where LVM_DEVICE is mounted
 LVM_SNAPSHOT_SIZE="5G"            #the size of the snapshot
 
 
-# The remote host and path that this script will rsync the VE's to.
+# The remote parameters that this script will use to rsync the VE's.
+REMOTE_USER=""
 REMOTE_HOST="my.remote.storage.com"
 REMOTE_DIR="/var/lib/vz/cross-backups/"
+REMOTE_NICE="nice -n 19"
+REMOTE_IONICE="ionice -c3"
 
 # Default rsync flags (please note the potentially unsafe delete flags).
 # Removing the v flag voids the line copied summary.
